# my_secure_file_transfer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  main.c  setup_test.sh
env/client/: client.Dockerfile
env/client/tests/: get_test.go  ls_test.go  set_test.go  usr_cmds_test.go
env/server/: server.Dockerfile
include/: RSA.h  auth.h  client.h  common_utils.h  server.h  sha256.h
src/: RSA.c  auth.c  client.c  common_utils.c  server.c  sha256.c
test/: Dockerfile  compose.yaml
